PROJECT(LookUp)

cmake_minimum_required(VERSION 2.6)

add_subdirectory(Hash)
add_subdirectory(Fibonacci)
add_subdirectory(Bisearch)
add_subdirectory(InsertValue)
add_subdirectory(Order)
add_subdirectory(Block)




IF(WIN32)

ENDIF(WIN32)

# install
#INSTALL(FILES COPYRIGHT  AUTHORS README DESTINATION share/docs/)
#INSTALL(PROGRAMS runhello.sh DESTINATION bin)
#INSTALL(DIRECTORY docs/ DESTINATION share/docs/)

